# AdventOfCode2020

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  build_gcc.sh  conanfile.txt  runtimes.ipynb
.github/workflows/: scorecards-analysis.yml
cmake/: static_analyzers.cmake
day01/: CMakeLists.txt  day01.cpp
day02/: CMakeLists.txt  day02.cpp
day03/: CMakeLists.txt  day03.cpp
day04/: CMakeLists.txt  day04.cpp
day05/: CMakeLists.txt  day05.cpp
day06/: CMakeLists.txt  day06.cpp
day07/: CMakeLists.txt  day07.cpp
day08/: CMakeLists.txt  day08.cpp
day09/: CMakeLists.txt  day09.cpp
day10/: CMakeLists.txt  day10.cpp  input_10_test3.txt
day11/: CMakeLists.txt  day11.cpp
day12/: CMakeLists.txt  day12.cpp
day13/: CMakeLists.txt  day13.cpp
day14/: CMakeLists.txt  day14.cpp  input_14_test3.txt
day15/: CMakeLists.txt  day15.cpp
day16/: CMakeLists.txt  day16.cpp
day17/: CMakeLists.txt  day17.cpp
day18/: CMakeLists.txt  day18.cpp
day19/: CMakeLists.txt  day19.cpp  input_19_test.txt  input_19_test2.txt
day20/: CMakeLists.txt  day20.cpp
day21/: CMakeLists.txt  day21.cpp
day22/: CMakeLists.txt  day22.cpp
day23/: CMakeLists.txt  day23.cpp
day24/: CMakeLists.txt  day24.cpp
day25/: CMakeLists.txt  day25.cpp
