cmake_minimum_required(VERSION 3.19)

# set the project name
project(adventofcode20)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include(${CMAKE_BINARY_DIR}/conan_paths.cmake)
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
include(cmake/static_analyzers.cmake)
file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/input)
#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_GLIBCXX_DEBUG")
conan_basic_setup()
enable_testing()
find_package(fmt)
find_package(GTest)
find_package(Threads REQUIRED) 
link_directories(${CMAKE_SOURCE_DIR}/lib)
add_subdirectory(common)
add_subdirectory(day01)
add_subdirectory(day02)
add_subdirectory(day03)
add_subdirectory(day04)
add_subdirectory(day05)
add_subdirectory(day06)
add_subdirectory(day07)
add_subdirectory(day08)
add_subdirectory(day09)
add_subdirectory(day10)
add_subdirectory(day11)
add_subdirectory(day12)
add_subdirectory(day13)
add_subdirectory(day14)
add_subdirectory(day15)
add_subdirectory(day16)
add_subdirectory(day17)
add_custom_target(copy_input_files)
add_custom_command(TARGET copy_input_files
        COMMAND ${CMAKE_COMMAND} -E copy
                ${CMAKE_SOURCE_DIR}/day*/input*.txt
                ${CMAKE_BINARY_DIR}/input)
